검정 추가작업

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -251,22 +251,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 내적 - np.dot(A, B)\n",
-    "* 외적 - np.cross(A, B) - 벡터곱\n",
+    "### 내적 - np.dot(A, B) @ \n",
+    "$ <A, B>  = A \\cdot B = A^TB $\n",
+    "### 외적 - np.cross(A, B) - 벡터곱\n",
     "\n",
-    "* 전치 - np.transpose(A)"
+    "### 전치 - np.transpose(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 [0 0 6]\n"
+      "0 0 [0 0 6]\n"
      ]
     }
    ],
@@ -274,7 +275,37 @@
     "v1 = np.array([3,0,0])\n",
     "v2 = np.array([0,2,0])\n",
     "\n",
-    "print(np.dot(v1, v2), np.cross(v1, v2))"
+    "print(np.dot(v1, v2), v1.T @ v2, np.cross(v1, v2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 직교(orthogonal)\n",
+    "$ a \\perp b \\leftrightarrow a^Tb = b^Ta = 0; cos90^\\circ = 0$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1, 1])\n",
+    "b = np.array([-1,1])\n",
+    "a @ b"
    ]
   },
   {
@@ -290,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -307,6 +338,7 @@
     }
    ],
    "source": [
+    "np.random.seed(121)\n",
     "print('seed',np.random.seed(42))\n",
     "print('randint',np.random.randint(12))\n",
     "print('rand\\n',np.random.rand(2,1))\n",
@@ -314,11 +346,258 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 행렬"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 대각 diag / 항등 eye  \n",
+    "* 대각합 trace: 정방행렬 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [0, 2, 0],\n",
+       "       [0, 0, 3]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 대각행렬\n",
+    "np.diag([1,2,3]) # 정방 아니여도됨 \n",
+    "np.trace(np.diag([1,2,3])) # 대각 합 \n",
+    "\n",
+    "# 항등행렬\n",
+    "np.eye(3) # np.identify(3)\n",
+    "\n",
+    "# 대칭행렬: 전치행렬 = 원행렬 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 행렬 길이 norm > 0\n",
+    "$||A||_p$  \n",
+    "일반적 p=2(생략가능), 프로베니우스 놈(Frobenius norm) $||A||_F$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.881943016134134"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(array1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 행렬식 determinant  \n",
+    "* det(A), detA, |A|  \n",
+    "\n",
+    "### 역행렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3173132732297208"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.90850552,  0.32043128, -0.05834146],\n",
+       "       [-0.03455448, -0.12743256,  0.6664582 ],\n",
+       "       [-0.39635745,  0.27079321, -0.17100017]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.det(np.random.randn(3,3))\n",
+    "\n",
+    "np.linalg.inv(np.random.randn(3,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 최소자승문제(least square problem)\n",
+    "* x 답, resid, 잔차제곱합, rank, s 특이값   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\okso6\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([-2.19746841, -4.9776731 , -0.64209336]),\n",
+       " array([], dtype=float64),\n",
+       " 3,\n",
+       " array([2.21944425, 1.02269232, 0.24577817]))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, resid, rank, s = np.linalg.lstsq(np.random.randn(3,3), np.random.randn(3))\n",
+    "x, resid, rank, s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### rank\n",
+    "* 행/열 벡터 rank 보다 커질 수 X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1 = np.array([[1,3],[2,4]])\n",
+    "np.linalg.matrix_rank(X1)\n",
+    "X1 = np.array([[1,3,5],[2,4,6]])\n",
+    "np.linalg.matrix_rank(X1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 고윳값 분해 \n",
+    "$ Au = \\lambda v $  \n",
+    "$ \\lambda $: eigenvalue 고윳값"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.37228132,  5.37228132]),\n",
+       " array([[-0.90937671, -0.56576746],\n",
+       "        [ 0.41597356, -0.82456484]]))"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1 = np.array([[1,3],[2,4]])\n",
+    "w1, w2 = np.linalg.eig(X1)\n",
+    "w1, w2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -333,39 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-0.212 -0.285 -0.574 -0.44 ]\n",
-      " [-0.33   1.184  1.615  0.367]\n",
-      " [-0.014  0.63   1.71  -1.327]\n",
-      " [ 0.402 -0.191  1.404 -1.969]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from numpy.linalg import svd\n",
-    "\n",
-    "# 4X4 Random 행렬 a 생성 \n",
-    "np.random.seed(121)\n",
-    "a = np.random.randn(4,4)\n",
-    "print(np.round(a, 3))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**SVD 행렬 분해**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -375,24 +622,26 @@
       "(4, 4) (4,) (4, 4)\n",
       "\n",
       "U matrix = 원본행렬 :\n",
-      " [[-0.079 -0.318  0.867  0.376]\n",
-      " [ 0.383  0.787  0.12   0.469]\n",
-      " [ 0.656  0.022  0.357 -0.664]\n",
-      " [ 0.645 -0.529 -0.328  0.444]]\n",
+      " [[-0.581 -0.46   0.213 -0.636]\n",
+      " [ 0.762 -0.101 -0.043 -0.638]\n",
+      " [-0.066  0.714  0.656 -0.236]\n",
+      " [-0.277  0.518 -0.723 -0.364]]\n",
       "\n",
       "Sigma Value = Sigma 행렬:\n",
-      " [3.423 2.023 0.463 0.079]\n",
+      " [3.46  2.119 1.124 0.661]\n",
       "\n",
       "V transpose matrix = 전치행렬:\n",
-      " [[ 0.041  0.224  0.786 -0.574]\n",
-      " [-0.2    0.562  0.37   0.712]\n",
-      " [-0.778  0.395 -0.333 -0.357]\n",
-      " [-0.593 -0.692  0.366  0.189]]\n"
+      " [[-0.704  0.313  0.378 -0.513]\n",
+      " [ 0.369 -0.077 -0.39  -0.84 ]\n",
+      " [ 0.588  0.608  0.531 -0.044]\n",
+      " [ 0.15  -0.725  0.65  -0.17 ]]\n"
      ]
     }
    ],
    "source": [
-    "U, Sigma, Vt = svd(a)\n",
+    "a = np.random.randn(4,4)\n",
+    "\n",
+    "U, Sigma, Vt = np.linalg.svd(a)\n",
     "print(U.shape, Sigma.shape, Vt.shape)\n",
     "print('\\nU matrix = 원본행렬 :\\n',np.round(U, 3))\n",
     "print('\\nSigma Value = Sigma 행렬:\\n',np.round(Sigma, 3))\n",
@@ -413,7 +662,7 @@
    "outputs": [],
    "source": [
     "# Sima를 다시 0 을 포함한 대칭행렬로 변환\n",
-    "Sigma_mat = np.diag(Sigma)\n",
+    "Sigma_mat = np.diag(Sigma) \n",
     "a_ = np.dot(np.dot(U, Sigma_mat), Vt)\n",
     "print(np.round(a_, 3))"
    ]
