소스 내용 요약

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "       [0, 0, 3]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -383,7 +383,7 @@
        "6"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -395,7 +395,7 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "16.881943016134134"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,28 +452,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.3173132732297208"
+       "0.04068553885710522"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "array([[ 0.90850552,  0.32043128, -0.05834146],\n",
-       "       [-0.03455448, -0.12743256,  0.6664582 ],\n",
-       "       [-0.39635745,  0.27079321, -0.17100017]])"
+       "array([[  54.36918822,  126.58460241,  111.19114437],\n",
+       "       [ -12.27582345,  -27.29049355,  -23.35011686],\n",
+       "       [-150.92727027, -337.41874419, -299.20097733]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -509,13 +509,13 @@
     {
      "data": {
       "text/plain": [
-       "(array([-2.19746841, -4.9776731 , -0.64209336]),\n",
+       "(array([-0.34883395, -6.48341442, -5.4567676 ]),\n",
        " array([], dtype=float64),\n",
        " 3,\n",
-       " array([2.21944425, 1.02269232, 0.24577817]))"
+       " array([3.14696605, 1.6615599 , 0.12855044]))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "2"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -554,7 +554,7 @@
        "2"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "        [ 0.41597356, -0.82456484]]))"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -622,19 +622,19 @@
       "(4, 4) (4,) (4, 4)\n",
       "\n",
       "U matrix = 원본행렬 :\n",
-      " [[-0.581 -0.46   0.213 -0.636]\n",
-      " [ 0.762 -0.101 -0.043 -0.638]\n",
-      " [-0.066  0.714  0.656 -0.236]\n",
-      " [-0.277  0.518 -0.723 -0.364]]\n",
+      " [[-0.01  -0.541 -0.813  0.212]\n",
+      " [-0.245  0.458 -0.485 -0.703]\n",
+      " [-0.914 -0.335  0.221 -0.052]\n",
+      " [-0.322  0.62  -0.232  0.676]]\n",
       "\n",
       "Sigma Value = Sigma 행렬:\n",
-      " [3.46  2.119 1.124 0.661]\n",
+      " [3.343 2.096 1.196 0.352]\n",
       "\n",
       "V transpose matrix = 전치행렬:\n",
-      " [[-0.704  0.313  0.378 -0.513]\n",
-      " [ 0.369 -0.077 -0.39  -0.84 ]\n",
-      " [ 0.588  0.608  0.531 -0.044]\n",
-      " [ 0.15  -0.725  0.65  -0.17 ]]\n"
+      " [[ 0.24  -0.57  -0.309 -0.722]\n",
+      " [ 0.541  0.649  0.283 -0.454]\n",
+      " [ 0.79  -0.346  0.086  0.499]\n",
+      " [ 0.162  0.365 -0.904  0.153]]\n"
      ]
     }
    ],
@@ -657,9 +657,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.378 -0.353 -0.461  0.067]\n",
+      " [-0.176  1.201  0.698 -0.172]\n",
+      " [-0.907  1.189  0.786  2.656]\n",
+      " [ 0.263  1.642  0.461  0.086]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Sima를 다시 0 을 포함한 대칭행렬로 변환\n",
     "Sigma_mat = np.diag(Sigma) \n",
@@ -676,9 +687,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.378 -0.353 -0.461  0.067]\n",
+      " [-0.176  1.201  0.698 -0.172]\n",
+      " [-1.554  0.848  0.237 -0.105]\n",
+      " [-1.378 -0.353 -0.461  0.067]]\n"
+     ]
+    }
+   ],
    "source": [
     "a[2] = a[0] + a[1]\n",
     "a[3] = a[0]\n",
@@ -687,12 +709,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 4) (4,) (4, 4)\n",
+      "Sigma Value:\n",
+      " [2.528 1.811 0.    0.   ]\n"
+     ]
+    }
+   ],
    "source": [
     "# 다시 SVD를 수행하여 Sigma 값 확인 \n",
-    "U, Sigma, Vt = svd(a)\n",
+    "U, Sigma, Vt = np.linalg.svd(a)\n",
     "print(U.shape, Sigma.shape, Vt.shape)\n",
     "print('Sigma Value:\\n',np.round(Sigma,3))"
    ]
@@ -706,9 +738,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 2) (2, 2) (2, 4)\n",
+      "[[-1.378 -0.353 -0.461  0.067]\n",
+      " [-0.176  1.201  0.698 -0.172]\n",
+      " [-1.554  0.848  0.237 -0.105]\n",
+      " [-1.378 -0.353 -0.461  0.067]]\n"
+     ]
+    }
+   ],
    "source": [
     "# U 행렬의 경우는 Sigma와 내적을 수행하므로 Sigma의 앞 2행에 대응되는 앞 2열만 추출\n",
     "U_ = U[:, :2]\n",
@@ -744,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,9 +805,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.r_[a,b]\n",
     "np.hstack([a,b])\n",
@@ -779,9 +854,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.r_[[a], [b]]\n",
     "np.vstack([a,b])"
@@ -789,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,9 +897,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  6,  7,  8],\n",
+       "       [ 3,  4,  5,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.concatenate((c,d), axis=1)"
    ]
@@ -815,9 +925,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 4],\n",
+       "       [2, 5],\n",
+       "       [3, 6]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 4],\n",
+       "       [2, 5],\n",
+       "       [3, 6]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.c_[a,b]\n",
     "np.column_stack([a,b])"
@@ -825,9 +960,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  3,  6,  9],\n",
+       "       [ 1,  4,  7, 10],\n",
+       "       [ 2,  5,  8, 11]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.concatenate((c.T, d.T), axis=1)"
    ]
